; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/bluetooth/sdpd/extr_sd.c_sd_profile_create_version_number_list.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/bluetooth/sdpd/extr_sd.c_sd_profile_create_version_number_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SDP_DATA_SEQ8 = common dso_local global i32 0, align 4
@SDP_DATA_UINT16 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*, i32)* @sd_profile_create_version_number_list to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sd_profile_create_version_number_list(i32* %0, i32* %1, i32* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  %10 = load i32*, i32** %6, align 8
  %11 = getelementptr inbounds i32, i32* %10, i64 5
  %12 = load i32*, i32** %7, align 8
  %13 = icmp ugt i32* %11, %12
  br i1 %13, label %14, label %15

14:                                               ; preds = %4
  store i32 -1, i32* %5, align 4
  br label %26

15:                                               ; preds = %4
  %16 = load i32, i32* @SDP_DATA_SEQ8, align 4
  %17 = load i32*, i32** %6, align 8
  %18 = call i32 @SDP_PUT8(i32 %16, i32* %17)
  %19 = load i32*, i32** %6, align 8
  %20 = call i32 @SDP_PUT8(i32 3, i32* %19)
  %21 = load i32, i32* @SDP_DATA_UINT16, align 4
  %22 = load i32*, i32** %6, align 8
  %23 = call i32 @SDP_PUT8(i32 %21, i32* %22)
  %24 = load i32*, i32** %6, align 8
  %25 = call i32 @SDP_PUT16(i32 256, i32* %24)
  store i32 5, i32* %5, align 4
  br label %26

26:                                               ; preds = %15, %14
  %27 = load i32, i32* %5, align 4
  ret i32 %27
}

declare dso_local i32 @SDP_PUT8(i32, i32*) #1

declare dso_local i32 @SDP_PUT16(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
